//==========================================================================
//
// History file for EvtGen
//
//===========================================================================

13th March 2018 John Back
    Updated EvtPythiaEngine to correctly handle updates of various particle 
    properties so that Pythia uses the same information as EvtGen (evt.pdl)
    for the generic and alias PYTHIA decay model.

12th March 2018 John Back
    Updated EvtBcXMuNu models (X = Scalar, Vector, Tensor) to generate
    Bc to D0(star) mu nu decays, with associated form factors in EvtBCXFF, 
    courtesy of Aleksei Luchinskii (LHCb). Also generalised the calculation 
    of their maximum probabilities by reusing the CalcMaxProb method in 
    EvtSemiLeptonicAmp, which now allows for different Q^2 binning 
    (default remains at 25 bins).

R01-07-00-------------------------------------------------------------------
13th December 2017 John Back
    New tag incorporating all changes below. Recommended external packages
    are HepMC 2.06.09, pythia 8.230, Photos++ 3.61 and Tauola++ 1.1.6c,
    as used in the setupEvtGen.sh script.

12th December 2017 John Back
    Changed Pythia validation example decay files to use Pythia8 codes.

6th December 2017 John Back
    Modified the examples to use DECAY.DEC (see 25th April 2016) instead of
    DECAY_2010.DEC. Changed EvtExternalGenList to assume Pythia8 codes are
    used in decay files by default, which is the case for DECAY.DEC. Also
    updated the setupEvtGen.sh script to work with Pythia 8.2x versions.

29th November 2017 John Back
    Modified EvtSVP, EvtVVP and EvtTVP models to handle both radiative and
    two-lepton decays, courtesy of Aleksei Luchinskii (LHCb).

14th July 2017 John Back
    Only create external generator objects if they don't already exist in
    EvtExternalGenFactory. Modified configure script to work with Pythia 8.2x

5th July 2017 Michal Kreps
    Register the VTOSLL model.

14th June 2017 John Back